modified templates to display events

--- a/my_event_site/event_app/templates/event_app/event_list.html
+++ b/my_event_site/event_app/templates/event_app/event_list.html
@@ -1,22 +1,17 @@
 <html>
     <head>
-        <title>Plan mhy event</title>
+        <title>Plan My Event</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
+    		<h1><a href="/">Plan My Event</a></h1>
+		</div>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
+		{% for event in events %}
+    		<div>
+        		<h3><a href="">{{ event.name }}</a></h3>
+        		<p>date: {{ event.date }}</p>
+    		</div>
+		{% endfor %}
     </body>
 </html>
