--- a/my_event_site/event_app/templates/event_app/base.html
+++ b/my_event_site/event_app/templates/event_app/base.html
@@ -10,6 +10,7 @@
     </head>
     <body>
     	<div class="page-header">
+            <a href="{% url 'event_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         	<h1><a href="/">Plan My Event</a></h1>
     	</div>
     	<div class="content container">
