--- a/my_event_site/event_app/templates/event_app/event_detail.html
+++ b/my_event_site/event_app/templates/event_app/event_detail.html
@@ -7,6 +7,7 @@
                 {{ event.date }}
             </div>
         {% endif %}
+        <a class="btn btn-default" href="{% url 'event_edit' pk=event.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         <h1>{{ event.name }}</h1>
     </div>
 {% endblock %}
