displayed title in event_details page along with the lists

--- a/my_event_site/event_app/templates/event_app/event_detail.html
+++ b/my_event_site/event_app/templates/event_app/event_detail.html
@@ -2,8 +2,9 @@
 
 
 {% block content %}
+	<h2><a href="{% url 'event_detail' pk=event.pk %}">{{ event.name }}</a></h3>
 	{% for list in lists %}
-		<div call = "event">
+		<div call = "lists">
 			<h3><a href="{% url 'event_detail' pk=list.pk %}">{{ list.title }}</a></h3>
 		</div>
 	{% endfor %}
