Removed incorrect links in titles and lists of each event

--- a/my_event_site/event_app/templates/event_app/base.html
+++ b/my_event_site/event_app/templates/event_app/base.html
@@ -16,7 +16,7 @@
     	<div class="content container">
         	<div class="row">
             	<div class="col-md-8">
-            		{% block content %}
+            		{% block content %}c
             		{% endblock %}
             	</div>
         	</div>
