Added ability to make new lists within events

--- a/my_event_site/event_app/templates/event_app/event_detail.html
+++ b/my_event_site/event_app/templates/event_app/event_detail.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 	<div class = "name">
+		<a href="{% url 'list_new' pk=event.pk %}" class="content"><span class="glyphicon glyphicon-plus"></span></a>
 		<h3>{{ event.name }}</h3>
 	</div>
 	{% for list in lists %}
