Added back arrows, and moved the 'plus' from the base html

--- a/my_event_site/event_app/templates/event_app/base.html
+++ b/my_event_site/event_app/templates/event_app/base.html
@@ -6,7 +6,7 @@
     	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/event_app.css' %}">
-		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
     <body>
     	<div class="page-header">
@@ -15,7 +15,7 @@
     	<div class="content container">
         	<div class="row">
             	<div class="col-md-8">
-            		{% block content %}c
+            		{% block content %}
             		{% endblock %}
             	</div>
         	</div>
