--- a/my_event_site/event_app/templates/event_app/event_list.html
+++ b/my_event_site/event_app/templates/event_app/event_list.html
@@ -1,7 +1,9 @@
 {% extends 'event_app/base.html' %}
 
 {% block content %}
-	<a href="{% url 'event_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+	<div class = "new">
+		<a href="{% url 'event_new' %}" class="content"><span class="glyphicon glyphicon-plus"></span></a>
+	</div>
 	{% for event in events %}
 		<div call = "event">
 			<div class = "date">
