--- a/my_event_site/event_app/templates/event_app/event_detail.html
+++ b/my_event_site/event_app/templates/event_app/event_detail.html
@@ -7,6 +7,13 @@
 		<a href="{% url 'list_new' pk=event.pk %}" class="content"><span class="glyphicon glyphicon-plus"></span></a>
 		<h2>{{ event.name }}</h2>
 	</div>
+
+	<div call = "guests">
+		<h3>Guest List</h3>
+		{% for guest in guestlist %}
+			<h4> {{ guest.full_name }} </h4>
+		{% endfor %}
+	</div>
 	
 	{% for item_list in items %}
 		{% load index %}
@@ -17,19 +24,4 @@
 			{% endfor %}
 		</div>
 	{% endfor %}
-	
-	<!-- {% for title in list_titles %}
-		<div call = "lists3">
-			<h4> {{ title }} </h3>
-		</div>
-	{% endfor %}
-	{% for list_ in items %}
-		<div call = "lists">
-			{% for item in list_ %}
-				<div call = "lists2">
-					<h4> {{ item.title }} </h3>
-				</div>
-			{% endfor %}
-		</div>
-	{% endfor %} -->
 {% endblock %}	
