--- a/my_event_site/event_app/templates/event_app/event_detail.html
+++ b/my_event_site/event_app/templates/event_app/event_detail.html
@@ -18,7 +18,7 @@
 	{% for item_list in items %}
 		{% load index %}
 		<div call = "lists3">
-			<h3> <a href="{% url 'list_detail' pk=event.pk pk2=lists_.0.pk %}">{{ list_titles | index:forloop.counter0 }} </h3>
+			<h3> <a href="{% url 'list_detail' pk=event.pk pk2=forloop.counter0 %}">{{ list_titles | index:forloop.counter0 }} </h3>
 			<div call = "items">
 				{% for item in item_list %}
 					<h4> {{ item }} </h4>
