User can add items

--- a/my_event_site/event_app/templates/event_app/guestlist_detail.html
+++ b/my_event_site/event_app/templates/event_app/guestlist_detail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 	<div class = "title">
+		<a href="{% url 'event_detail' pk=event.pk%}" class="content"><span class="glyphicon glyphicon-arrow-left"></span></a>
 		<h3> Guest List </h3>
 	</div>
 	{% for person in people %}
