--- a/my_event_site/event_app/templates/event_app/event_list.html
+++ b/my_event_site/event_app/templates/event_app/event_list.html
@@ -1,15 +1,18 @@
 {% extends 'event_app/base.html' %}
 
 {% block content %}
-	<div class = "new">
-		<a href="{% url 'event_new' %}" class="content"><span class="glyphicon glyphicon-plus"></span></a>
-	</div>
-	{% for event in events %}
-		<div call = "event">
+	<div id='events1'>
+		<h2> Events </h2>
+		<div class = "new">
+			<a href="{% url 'event_new' %}" >New Event <span class="glyphicon glyphicon-plus"></span></a>
+		</div>
+		{% for event in events %}
+			<div class = "event">
+				<h3><a href="{% url 'event_detail' pk=event.pk %}">{{ event.name }}</a></h3>
+			</div>
 			<div class = "date">
 				{{ event.date }}
 			</div>
-			<h3><a href="{% url 'event_detail' pk=event.pk %}">{{ event.name }}</a></h3>
-		</div>
-	{% endfor %}
+		{% endfor %}
+	</div>
 {% endblock %}	
