--- a/my_event_site/event_app/templates/event_app/list_detail.html
+++ b/my_event_site/event_app/templates/event_app/list_detail.html
@@ -2,12 +2,19 @@
 
 {% block content %}
 	<div class = "title">
-		<a href="{% url 'event_detail' pk=event.pk %}" class="content"><span class="glyphicon glyphicon-arrow-left"></span></a>
-		<a href="{% url 'item_new' pk=event.pk pk2=which_list.pk%}" class="content"><span class="glyphicon glyphicon-plus"></span></a>
-		<h3>{{ which_list.title }}</h3>
+		<a href="{% url 'event_detail' pk=event.pk %}" class="content">Back  <span class="glyphicon glyphicon-arrow-left"></span></a>
+		<a href="{% url 'item_new' pk=event.pk pk2=which_list.pk%}" class="content">New Item  <span class="glyphicon glyphicon-plus"></span></a>
+		<h2>{{ event.name }} - {{ which_list.title }}</h2>
 	</div>
-	{% for item in items %}
-		<div call = "items">
+	<h3> Completed </h3>
+	{% for item in items_completed %}
+		<div class= "items">
+			<h4>{{ item.title }}</h4>
+		</div>
+	{% endfor %}
+	<h3> Not Completed </h3>
+	{% for item in items_not_completed %}
+		<div class= "items">
 			<h4>{{ item.title }}</h4>
 		</div>
 	{% endfor %}
