--- a/my_event_site/event_app/templates/event_app/event_list.html
+++ b/my_event_site/event_app/templates/event_app/event_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div id='events1'>
-		<h2> Events </h2>
+		<h2> Your Events </h2>
 		<div class = "new">
 			<a href="{% url 'event_new' %}" >New Event <span class="glyphicon glyphicon-plus"></span></a>
 		</div>
